# 322DineAutoProject

./: AdminScreenUI.cpp  AdminScreenUI.h  AdminScreenUI.ui  CMakeLists.txt  CartDialog.cpp  CartDialog.h  CartDialog.ui  CheckoutDialog.cpp  CheckoutDialog.h  CheckoutDialog.ui  LoginScreen.cpp  LoginScreen.h  LoginScreen.ui  LoginScreenUI.cpp  LoginScreenUI.h  LoginScreenUI.ui  MenuScreenUI.cpp  MenuScreenUI.h  MenuScreenUI.ui  Sprint 1 Report.txt  Sprint 1 Report.txt:Zone.Identifier  Sprint 2 Report.md  analytics.cpp  analytics.cpp:Zone.Identifier  analytics.hpp:Zone.Identifier  credentials.csv  creditCards.txt  main  main.cpp  main.h  main.ilk  main.ui  menu.cpp  menu.csv  menu.hpp  menuItem.cpp  menuItem.hpp  n  orderDataBase.cpp  orderDataBase.hpp  (+6 more)
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: NewIssue.yml  main.yml
DineAuto/: CMakeLists.txt  DineAuto.cpp  DineAuto.h
KellamBuild/: CMakeCache.txt  DineAutoProgram  cmake_install.cmake
ShianBuild/: DineAutoProgram  Makefile
Sprint Reports/: Sprint 1 Report.txt  Sprint 2 Report.md  Sprint 3 Report.md
Temp/: README.md  menu.cpp  menu.hpp  menuItem.cpp  menuItem.hpp  orderDataBase.cpp  orderDataBase.hpp  orders.csv  queue.cpp  queue.hpp  shoppingCart.cpp  shoppingCart.hpp
Temp/KellamBuild/: Makefile
Temp/ShianBuild/: CMakeCache.txt  cmake_install.cmake
Temp/Sprint Reports/: Sprint 1 Report.txt  Sprint 2 Report.md
Temp/backendBuild/: CMakeCache.txt
Temp/ryanBuild/: CMakeCache.txt  Makefile
code/: analytics.hpp  main.cpp  menuItem.cpp  menuItem.hpp  shoppingCart.cpp  shoppingCart.hpp
code/analytics/: analytics.cpp
code/menu/: menu.hpp
ryanBuild/: DineAutoProgram  Makefile  cmake_install.cmake
text & csv files/: CMakeLists.txt
txt & csv files/: creditCards.txt  orders.csv
